--- a/Themes/BasicBackground/BasicBackground.css
+++ b/Themes/BasicBackground/BasicBackground.css
@@ -7506,7 +7506,7 @@ html:only-child > head + body div.app-3xd6d0 > div.app-2CXKsg > div.layers-OrUES
 	position: relative !important;
 }
 html:only-child > head + body div.app-3xd6d0 > div.app-2CXKsg > div.layers-OrUESM.layers-1YQhyW > div.layer-86YKbF.baseLayer-W6S8cY + div.layer-86YKbF > div.standardSidebarView-E9Pc3j > div.sidebarRegion-1VBisG > div.sidebarRegionScroller-FXiQOh.thin-RnSY0a.scrollerBase-1Pkza4.fade-27X6bG > nav.sidebar-nqHbhN > div.side-1lrxIh > div.info-3pQQBb::after {
-	content: "BasicBackground by" !important;
+	content: "RayderDrago's Discord" !important;
 	font-size: 12px !important;
 	color: var(--text-muted) !important;
 	cursor: pointer !important;
@@ -7523,23 +7523,3 @@ html:only-child > head + body div.app-3xd6d0 > div.app-2CXKsg > div.layers-OrUES
 	right: unset !important;
 	transform: unset !important;
 	animation: unset !important;
-}
-html:only-child > head + body div.app-3xd6d0 > div.app-2CXKsg > div.layers-OrUESM.layers-1YQhyW > div.layer-86YKbF.baseLayer-W6S8cY + div.layer-86YKbF > div.standardSidebarView-E9Pc3j > div.sidebarRegion-1VBisG > div.sidebarRegionScroller-FXiQOh.thin-RnSY0a.scrollerBase-1Pkza4.fade-27X6bG > nav.sidebar-nqHbhN > div.side-1lrxIh > div.info-3pQQBb::before {
-	content: "DevilBro" !important;
-	font-size: 12px !important;
-	font-weight: 600 !important;
-	color: rgb(var(--accentcolor)) !important;
-	display: inline !important;
-	opacity: 1 !important;
-	padding: 0 !important;
-	margin: 0 !important;
-	cursor: pointer !important;
-	visibility: visible !important;
-	position: absolute !important;
-	top: unset !important;
-	left: 117px !important;
-	bottom: 8px !important;
-	right: unset !important;
-	transform: unset !important;
-	animation: unset !important;
-}
